[gd_scene load_steps=19 format=2]

[ext_resource path="res://visuals/images/pacman_2.png" type="Texture" id=1]
[ext_resource path="res://visuals/fonts/milliard-cufonfonts/Rene Bieder  Milliard Book.otf" type="DynamicFontData" id=2]
[ext_resource path="res://visuals/fonts/milliard-cufonfonts/Rene Bieder  Milliard Bold.otf" type="DynamicFontData" id=3]
[ext_resource path="res://visuals/icons/icons8-heart-96.png" type="Texture" id=4]
[ext_resource path="res://visuals/icons/icons8-envoi-de-courriel-80.png" type="Texture" id=5]
[ext_resource path="res://visuals/icons/icons8-bulle-96.png" type="Texture" id=6]
[ext_resource path="res://visuals/icons/myself_round_outline_150.png" type="Texture" id=7]
[ext_resource path="res://visuals/icons/icons8-ruban-marque-page-96.png" type="Texture" id=8]
[ext_resource path="res://visuals/icons/icons8-menu-2-96.png" type="Texture" id=9]
[ext_resource path="res://scenes/post.gd" type="Script" id=10]
[ext_resource path="res://visuals/icons/heart_full_color_96.png" type="Texture" id=11]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0.0546875, 0.0546875, 0.0546875, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 54
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 42
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 48
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 48
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 36
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[node name="Post" type="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -540.0
margin_right = 540.0
margin_bottom = 1656.0
rect_min_size = Vector2( 1080, 1602 )
mouse_filter = 1
size_flags_vertical = 3
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
heart_full = ExtResource( 11 )
heart = ExtResource( 4 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="HBoxContainer" parent="Content"]
margin_right = 1080.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 150 )
size_flags_horizontal = 3
custom_constants/separation = 20

[node name="HSeparator2" type="HSeparator" parent="Content/Title"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 30.0
margin_bottom = 150.0
rect_min_size = Vector2( 30, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Content/Title"]
margin_left = 50.0
margin_right = 150.0
margin_bottom = 150.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="Content/Title"]
margin_left = 170.0
margin_top = 49.0
margin_right = 446.0
margin_bottom = 101.0
custom_fonts/font = SubResource( 3 )
text = "vico.choco"

[node name="HSeparator" type="HSeparator" parent="Content/Title"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 466.0
margin_right = 910.0
margin_bottom = 150.0
size_flags_horizontal = 3

[node name="MoreBtn" type="TextureButton" parent="Content/Title"]
margin_left = 930.0
margin_right = 1080.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )
texture_normal = ExtResource( 9 )
expand = true
stretch_mode = 3

[node name="TextureRect" type="TextureRect" parent="Content"]
margin_top = 154.0
margin_right = 1080.0
margin_bottom = 1272.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 7

[node name="Heart" type="TextureRect" parent="Content/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -48.0
margin_right = 48.0
margin_bottom = 48.0
rect_scale = Vector2( 1e-05, 1e-05 )
rect_pivot_offset = Vector2( 48, 48 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Content"]
margin_top = 1276.0
margin_right = 1080.0
margin_bottom = 1656.0
custom_constants/separation = 15

[node name="ButtonContainer" type="HBoxContainer" parent="Content/VBoxContainer"]
margin_right = 1080.0
margin_bottom = 115.0
rect_min_size = Vector2( 0, 115 )
size_flags_horizontal = 3

[node name="HSeparator2" type="HSeparator" parent="Content/VBoxContainer/ButtonContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 25.0
margin_bottom = 115.0
rect_min_size = Vector2( 25, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LikeBtn" type="TextureButton" parent="Content/VBoxContainer/ButtonContainer"]
margin_left = 29.0
margin_right = 154.0
margin_bottom = 115.0
rect_min_size = Vector2( 125, 0 )
texture_normal = ExtResource( 4 )

[node name="CommentBtn" type="TextureButton" parent="Content/VBoxContainer/ButtonContainer"]
margin_left = 158.0
margin_right = 283.0
margin_bottom = 115.0
rect_min_size = Vector2( 125, 0 )
texture_normal = ExtResource( 6 )

[node name="ShareBtn" type="TextureButton" parent="Content/VBoxContainer/ButtonContainer"]
margin_left = 287.0
margin_right = 412.0
margin_bottom = 115.0
rect_min_size = Vector2( 125, 0 )
texture_normal = ExtResource( 5 )

[node name="HSeparator" type="HSeparator" parent="Content/VBoxContainer/ButtonContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 416.0
margin_right = 951.0
margin_bottom = 115.0
size_flags_horizontal = 3

[node name="SaveBtn" type="TextureButton" parent="Content/VBoxContainer/ButtonContainer"]
margin_left = 955.0
margin_right = 1080.0
margin_bottom = 115.0
rect_min_size = Vector2( 125, 0 )
texture_normal = ExtResource( 8 )

[node name="ButtonContainer2" type="HBoxContainer" parent="Content/VBoxContainer"]
margin_top = 130.0
margin_right = 1080.0
margin_bottom = 180.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3

[node name="HSeparator2" type="HSeparator" parent="Content/VBoxContainer/ButtonContainer2"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 25.0
margin_bottom = 50.0
rect_min_size = Vector2( 25, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewsLabel" type="Label" parent="Content/VBoxContainer/ButtonContainer2"]
margin_left = 29.0
margin_right = 1080.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = SubResource( 4 )
text = "999999 views"
valign = 1

[node name="ButtonContainer3" type="HBoxContainer" parent="Content/VBoxContainer"]
margin_top = 195.0
margin_right = 1080.0
margin_bottom = 315.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3

[node name="HSeparator2" type="HSeparator" parent="Content/VBoxContainer/ButtonContainer3"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 25.0
margin_bottom = 120.0
rect_min_size = Vector2( 25, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="RichTextLabel" parent="Content/VBoxContainer/ButtonContainer3"]
margin_left = 29.0
margin_right = 1080.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 120 )
size_flags_horizontal = 3
custom_fonts/bold_font = SubResource( 5 )
custom_fonts/normal_font = SubResource( 6 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
bbcode_text = "[b]vico.choco[/b] Recreating well known apps in Godot, is the... [color=#878787]more[/color]"
text = "vico.choco Recreating well known apps in Godot, is the... more"

[node name="ButtonContainer4" type="HBoxContainer" parent="Content/VBoxContainer"]
margin_top = 330.0
margin_right = 1080.0
margin_bottom = 380.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3

[node name="HSeparator2" type="HSeparator" parent="Content/VBoxContainer/ButtonContainer4"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 25.0
margin_bottom = 50.0
rect_min_size = Vector2( 25, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewsLabel2" type="Label" parent="Content/VBoxContainer/ButtonContainer4"]
margin_left = 29.0
margin_right = 1080.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.643137, 0.643137, 0.643137, 1 )
text = "6 hours ago"
valign = 1

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="gui_input" from="Content/TextureRect" to="." method="_on_TextureRect_gui_input"]
[connection signal="pressed" from="Content/VBoxContainer/ButtonContainer/LikeBtn" to="." method="_on_LikeBtn_pressed"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
